grammar.js
    program: $ => seq(
      repeat(
        seq(
          $.statement,
          ';',
        ),
      ),
      optional(
        $.statement,
      )
    ),

    statement: $ => choice(
      $._select_statement_elevated,
      $.drop,
    ),

    drop: $ => seq(
      $.keyword_drop,
      $.identifier
    ),

    _select_statement_elevated: $ => seq(
      alias($._select_elevated, $.select),
      optional($.into),
      optional($.from),
      optional($.for_update),
      optional(
        seq(
          $.union,
          $._select_statement,
        )
      ),
    ),

    _select_statement: $ => seq(
      $.select,
      optional($.from),
      repeat(
        seq(
          $.union,
          $.select,
          optional($.from),
        )
      ),
    ),

    union: $ => seq(
      $.keyword_union,
      optional(
        $.keyword_all
      )
    ),

    select: $ => seq(
      $.keyword_select,
      $.select_expression,
    ),

    select_expression: $ => comma_list(
      seq(
        optional(
          any_order(
            optional($.keyword_distinct),
            optional($.top_statement),
          )
        ),
        $.term,
      ),
      true
    ),


    into: $ => seq(
      $.keyword_into,
      field('name', $.identifier)
    ),

    from: $ => seq(
      $.keyword_from,
      comma_list($.relation, true),
      repeat(
        $.join
      ),
      optional($.where),
      optional($.group_by),
      optional($.order_by),
      optional($.totals_expression),
    ),

    where: $ => seq(
      $.keyword_where,
      field("predicate", $._expression),
    ),

    group_by: $ => seq(
      $.keyword_group,
      $.keyword_by,
      choice(
        seq(
          $.keyword_grouping,
          $.keyword_sets,
          $.grouping_sets
        ),
        comma_list($._expression, true),
      ),
      optional($._having),
    ),

    _having: $ => seq(
      $.keyword_having,
      $._expression,
    ),

    relation: $ => prec.right(
      seq(
        choice(
          $.subquery,
          $.invocation,
          $.object_reference,
        ),
        optional(
          $._alias,
        ),
      ),
    ),

    invocation: $ => prec(1,
      seq(
        repeat(
          $._object_reference_parent
        ),
        $.object_reference,
        wrapped_in_parenthesis(
          comma_list(
            optional(
              field(
                'parameter',
                //TODO remove term
                $.term,
              )
            )
          )
        ),
      ),
    ),

    top_statement: $ => seq(
      $.keyword_top,
      $.natural_number,
    ),

    term: $ => seq(
      field(
        'value',
        choice(
          $.all_fields,
          $._expression,
        ),
      ),
      optional($._alias),
    ),

    _alias: $ => seq(
      optional($.keyword_as),
      field('alias', $.identifier),
    ),

    _expression: $ => prec(1,
      choice(
        $.literal,
        $.field,
        $.parameter,
        $.case,
        //TODO remove subqery, it's not allowed in most cases
        $.subquery,
        $.cast,
        $.count,
        $.invocation,
        $.function_invocation,
        $.binary_expression,
        $.unary_expression,
        $.between_expression,
        $.refs_expression,
        $.parenthesized_expression,
      )
    ),

    binary_expression: $ => choice(
      ...[
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['<>', 'binary_relation'],
        [$.keyword_is, 'binary_is'],
        [$.is_not, 'binary_is'],
        [$.keyword_like, 'pattern_matching'],
        [$.not_like, 'pattern_matching'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      ...[
        [$.keyword_and, 'clause_connective'],
        [$.keyword_or, 'clause_disjunctive'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      ...[
        [$.keyword_in, 'binary_in'],
        [$.not_in, 'binary_in'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', choice($.list, $.subquery))
        ))
      ),
    ),

    subquery: $ => wrapped_in_parenthesis(
      $._select_statement
    ),

    literal: $ => prec(2,
      choice(
        $._natural_number,
        $._decimal_number,
        $._literal_string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),

    _literal_string: _ => /"(""|[^"])*"/,

    natural_number: $ => $._natural_number,

    _natural_number: _ => seq(
      optional("-"),
      /\d+/
    ),

    _decimal_number: _ => seq(
      optional(
        choice("-", "+")),
      /((\d+(_\d+)*)?[.]\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)|(\d+(_\d+)*[.](e[+-]?\d+(_\d+)*)?)/
    ),

    all_fields: $ => seq(
      repeat(
        $._object_reference_parent,
      ),
      '*',
    ),

    field: $ => seq(
      repeat(
        $._object_reference_parent,
      ),
      field('name', $.identifier),
    ),

    //TODO object reference should be with optional multiple parents
    object_reference: $ => field('name', $.identifier),

    _object_reference_parent: $ => seq(
      $.object_reference,
      '.',
    ),

    keyword_select: _ => make_keyword_en_ru("select", "выбрать"),
    keyword_allowed: _ => make_keyword_en_ru("allowed", "разрешенные"),
    keyword_distinct: _ => make_keyword_en_ru("distinct", "различные"),
    keyword_top: _ => make_keyword_en_ru("top", "первые"),
    keyword_true: _ => make_keyword_en_ru("true", "истина"),
    keyword_false: _ => make_keyword_en_ru("false", "ложь"),
    keyword_as: _ => make_keyword_en_ru("as", "как"),
    keyword_in: _ => make_keyword_en_ru("in", "в"),
    keyword_into: _ => make_keyword_en_ru("into", "поместить"),
    keyword_drop: _ => make_keyword_en_ru("drop", "уничтожить"),
    keyword_from: _ => make_keyword_en_ru("from", "из"),
    keyword_where: _ => make_keyword_en_ru("where", "где"),
    keyword_group: _ => make_keyword_en_ru("group", "сгруппировать"),
    keyword_by: _ => make_keyword_en_ru("by", "по"),
    keyword_having: _ => make_keyword_en_ru("having", "имеющие"),
    keyword_union: _ => make_keyword_en_ru("union", "объединить"),
    keyword_all: _ => make_keyword_en_ru("all", "все"),
    keyword_null: _ => make_keyword("null"),
    parameter: $ => seq('&', $._identifier),

    identifier: $ => $._identifier,

    _identifier: _ => /[a-zA-Zа-яА-ЯіІїЇєЄґҐщЩЁё_][0-9a-zA-Zа-яА-ЯіІїЇєЄґҐщЩЁё_]*/,

    comment: _ => /\/\/.*/,

    //types
