test/corpus/invocations.txt
================================================================================
Simple from invocation
================================================================================

SELECT *
FROM my_table();

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (invocation
          (object_reference
            name: (identifier)))))))

================================================================================
From invocation with multiple empty parameters
================================================================================

SELECT *
FROM my_table(, ,
,
);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (invocation
          (object_reference
            name: (identifier)))))))

================================================================================
From invocation with parameter
================================================================================

SELECT *
FROM my_table(&p1);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (invocation
          (object_reference
            name: (identifier))
          parameter: (term
            value: (parameter)))))))

================================================================================
From invocation with multiple parameters
================================================================================

SELECT *
FROM my_table(&p1, &p2);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (invocation
          (object_reference
            name: (identifier))
          parameter: (term
            value: (parameter))
          parameter: (term
            value: (parameter)))))))

================================================================================
From invocation with omitted parameter,
================================================================================

SELECT *
FROM my_table(, &p1,, &p2);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (invocation
          (object_reference
            name: (identifier))
          parameter: (term
            value: (parameter))
          parameter: (term
            value: (parameter)))))))
