test/corpus/queries.txt
================================================================================
Can parse subquery
================================================================================

SELECT * FROM (SELECT 1) a;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (subquery
          (select
            (keyword_select)
            (select_expression
              (term
                value: (literal)))))
        alias: (identifier)))))

================================================================================
Union
================================================================================

SELECT 1 UNION ALL SELECT 2;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal))))
    (union
      (keyword_union)
      (keyword_all))
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal))))))

================================================================================
SELECT FROM SUBQUERY WITH UNION
================================================================================

SELECT
a1.*
FROM (
  SELECT 1 FROM tb01
  UNION ALL
  SELECT 2 FROM tb01
) a1;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields
            (object_reference
              name: (identifier))))))
    (from
      (keyword_from)
      (relation
        (subquery
          (select
            (keyword_select)
            (select_expression
              (term
                value: (literal))))
          (from
            (keyword_from)
            (relation
              (object_reference
                name: (identifier))))
            (union
              (keyword_union)
              (keyword_all))
            (select
              (keyword_select)
              (select_expression
                (term
                  value: (literal))))
            (from
              (keyword_from)
              (relation
                (object_reference
                  name: (identifier)))))
                alias: (identifier)))))

================================================================================
Simple drop
================================================================================

Drop table;

--------------------------------------------------------------------------------

(program
  (statement
    (drop
      (keyword_drop)
      (identifier))))

================================================================================
Simple multiple Queries
================================================================================

SELECT TRUE; SELECT FALSE;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal
            (keyword_true))))))
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal
            (keyword_false)))))))

================================================================================
Multiple Queries with different statements
================================================================================

SELECT TRUE INTO table;
//comment
SELECT * FROM table;
//comment
DROP table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal
            (keyword_true)))))
    (into
      (keyword_into)
      name: (identifier)))
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))))
  (comment)
  (statement
    (drop
      (keyword_drop)
      (identifier))))
